--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Lu Cheng / 程璐"
 title_separator          : "-"
 name                     : &name "Lu Cheng"
 description              : &description "personal description"
-url                      : https://GitHubLuCheng.github.io
+url                      : "https://GitHubLuCheng.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "GitHubLuCheng/GitHubLuCheng.github.io"
 breadcrumbs              : false # true, false (default)
@@ -56,7 +56,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : @luchengSRAI
+  username               : "luchengSRAI"
 facebook:
   username               :
   app_id                 :
@@ -86,7 +86,7 @@ author:
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=9rpkTSkAAAAJ&hl=en"
-  email            : lucheng@uic.edu
+  email            : "lucheng@uic.edu"
   #researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -95,7 +95,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/GitHubLuCheng"
+  github           : "GitHubLuCheng"
   google_plus      :
   keybase          :
   lastfm           :
@@ -105,7 +105,7 @@ author:
   soundcloud       :
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/luchengSRAI"
+  twitter          : "luchengSRAI"
   vine             :
   weibo            :
   xing             :
