--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   name             : "Lu Cheng"
   avatar           : "profile.png"
   bio              : "Department of Computer Science, University of Illinois Chicago (UIC)"
-  location         : "SOE 1136. 851 S Morgan St <br/> Chicago, IL 60607"
+  location         : "SEO 1136. 851 S Morgan St <br/> Chicago, IL 60607"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=9rpkTSkAAAAJ&hl=en"
@@ -95,7 +95,6 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "GitHubLuCheng"
   google_plus      :
   keybase          :
   lastfm           :
