--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Lu Cheng"
-  avatar           : "profile.png"
+  avatar           : "profile1.png"
   bio              : "Department of Computer Science, University of Illinois Chicago (UIC)"
   location         : "SEO 1136. 851 S Morgan St <br/> Chicago, IL 60607"
   employer         :
