--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ main:
   - title: "Tutorials"
     url: /tutorials/
 
+  - title: "People"
+    url: /people/
+
   - title: "Services"
     url: /services
 
