--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Lu Cheng / 程璐"
 title_separator          : "-"
-name                     : &name "Lu Cheng"
+name                     : &name "Lu Cheng, Assistant Professor"
 description              : &description "personal description"
 url                      : "https://lcheng.org"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -79,7 +79,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Lu Cheng"
+  name             : "Lu Cheng, Assitant Professor"
   avatar           : "profile_1.png"
   bio              : "Department of Computer Science, University of Illinois Chicago (UIC)"
   location         : "SEO 1136. 851 S Morgan St <br/> Chicago, IL 60607"
@@ -105,7 +105,7 @@ author:
   steam            :
   tumblr           :
   twitter          : "luchengSRAI"
-  vine             :
+  CV               : "CV.pdf"
   weibo            :
   xing             :
   youtube          :
