--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Lu Cheng, Assitant Professor"
+  name             : "Lu Cheng, Assistant Professor"
   avatar           : "profile_1.png"
   bio              : "Department of Computer Science, University of Illinois Chicago (UIC)"
   location         : "SEO 1136. 851 S Morgan St <br/> Chicago, IL 60607"
