--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   name             : "Lu Cheng, Assistant Professor"
   avatar           : "profile_1.png"
   bio              : "Department of Computer Science, University of Illinois Chicago (UIC)"
-  location         : "SEO 1136. 851 S Morgan St <br/> Chicago, IL 60607"
+  location         : "CDRLC 5448. 850 W Taylor St <br/> Chicago, IL 60607"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=9rpkTSkAAAAJ&hl=en"
