--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 author:
   name             : "Lu Cheng, Assistant Professor"
   avatar           : "profile_1.png"
-  bio              : "Department of Computer Science, University of Illinois Chicago (UIC)"
-  location         : "CDRLC 5448. 850 W Taylor St <br/> Chicago, IL 60607"
+  bio              : "Department of Computer Science, UIC"
+  location         : "CDRLC 5448"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=9rpkTSkAAAAJ&hl=en"
